# Infotainment-Player

./: CMakeLists.txt  README.md  resources.qrc
resources/: main.qml
src/: audio_streamer.cpp  audio_streamer.h  main.cpp  player.cpp  player.h
